--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -62,11 +62,10 @@ p {
   padding-top: 9px;
   font-weight: bold;
   line-height: 1;
-}
-
-#logo:hover {
+  &:hover {
   color: #fff;
   text-decoration: none;
+  }
 }
 
 /* footer */
