--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
 <body>
   <%= render 'layouts/header' %>
   <div class="container">
+    <% flash.each do |type, message| %>
+      <div class="alert alert-<%= type %>"><%= message %></div>
+    <% end %>
     <%= yield %>
     <%= debug(params) if Rails.env.development? %>
     <%= render 'layouts/footer' %>
