--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,6 +8,9 @@
       <%= render 'shared/micropost_form' %>
     </section>
   </aside>  
+  <div class="span8">
+    <%= render 'shared/feed' %>
+  </div>
 </div>
 <% else %>
 <div class="center hero-unit">
