--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -5,4 +5,8 @@
   </span>
   <span class="content"><%= feed_item.content %></span>
   <span class="timestamp">Posted <%= time_ago_in_words(feed_item.created_at) %> ago.</span>
+  <% if current_user?(feed_item.user)  %>
+  <%= link_to 'Delete', feed_item, method: :delete, data: { confirm: "Are you sure?", title: feed_item.content} %>
+  <% end %>
+
 </li>
