--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -2,6 +2,7 @@
   <%= render 'shared/error_messages', object: f.object %>
   <div class="field">
     <%= f.text_area :content, placeholder: 'Compose your micropost...' %>
+    Characters left: <em id="chars_left">140</em>
   </div>
   <%= f.submit "Post", class: 'btn btn-large btn-primary' %>
 <% end %>
